Update OS packages to avoid security problems
Trivy is flagging libc with a security vulnerability in the Python
image, so we're going to update the OS to get a version of libc that
isn't vulnerable.

--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -8,6 +8,9 @@ RUN pip3 install gunicorn poetry \
 COPY . .
 
 RUN poetry install --no-interaction --no-ansi --no-dev
+RUN apt-get update \
+    && apt-get upgrade -y \
+    && rm -rf /var/lib/apt/lists/*
 
 EXPOSE 80
 CMD ["gunicorn", "unified_graphics.wsgi:app", "--bind=0.0.0.0:80"]
